# Logstar-online-Stream

./: .gitignore  Dockerfile  Jenkinsfile  LoRa_metadata.xlsx  Makefile  README.md  entrypoint.sh  generate_to_publish_dataset.ipynb  load-config.sh-example  load-config_mssql-testdb.sh  load-config_psql-testdb.sh  logstar-receiver.py  plugin-manager.py  prep_release_data.py  processing-step-manager.py  pyproject.toml  requirements.txt  requrements.txt  sensor_mapping.json-example  setup.py  stationnames.txt  stations.txt  stations_blank.txt
.github/workflows/: docker_build.yml
docker/: Dockerfile  entrypoint.sh
docs/: generate_publication_data.md  processing_steps.md
jupyter-examples/: data-download-example.ipynb  filter-download.ipynb
logstar_stream/: logstar.py
logstar_stream/processing_steps/: BlacklistFilterColumnsPS.py  BulkConductivityDriftPS.py  FilterColumnsPS.py  JumpCheckPS.py  ProcessingStep.py  SimpleRenameColumnsPS.py  WeatherStationPrecipitationPS.py  WhitelistFilterColumnsPS.py
mappings/: patchcrop-sensor-mapping.json
processing_steps/: BulkConductivityDriftPS.py  FilterColumnsPS.py  JumpCheckPS.py  ProcessingStep.py  WeatherStaionPrecipitationPS.py
src/: csv_handler.py  database_connector.py  db_connector.py  postgres_connector.py
