
[build-system]
requires = [
      "setuptools>=61.0.0",
      "wheel",
    ]

[project]
name = 'logstar-receiver'
version="1.1"
description="supporting library for bonares/zalf repository"
authors = [{ name = "marcel wallschlaeger", email="marcel.wallschlaeger@zalf.de" }]
requires-python = '>=3.8'
#include = ["logstar_stream", "logstar_stream.processing_steps"]
dependencies = [
    "requests==2.28.1",
    "sqlalchemy==1.4.39",
    "pandas==1.4.3"

]
[project.urls]
repository = "https://github.com/zalf-rdm/Logstar-online-Stream/"

[tool.setuptools.packages.find]
include = ["logstar_stream*", "logstar_stream.processing_steps*"]
namespaces = true